--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,11 @@
         android:label="Riddles Game EN"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+        <meta-data 
+         android:name="com.google.android.gms.ads.APPLICATION_ID"
+         android:value="ca-app-pub-3870224518842118~8870434068"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
