--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: riddles game en
 
 publish_to: 'none'
 
-version: 1.0.0+1
+version: 2.0.0+2
 
 environment:
   sdk: '>=2.18.4 <3.0.0'
@@ -51,15 +51,16 @@ dependencies:
   mockito: ^5.3.2
   equatable: ^2.0.5
 
-  # rate, share app
+  # 
   rate_my_app: ^1.1.3
   rating_dialog: ^2.0.4
   store_redirect: ^2.0.1
   share_plus: ^6.3.0
+  upgrader: ^6.0.1
   path_provider_android: ^2.0.22
 
   # mobile add
-  #google_mobile_ads: ^2.0.1
+  google_mobile_ads: ^2.0.1
 
 
 
