--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: riddles game en
 
 publish_to: 'none'
 
-version: 2.0.0+2
+version: 2.0.1+3
 
 environment:
   sdk: '>=2.18.4 <3.0.0'
@@ -19,21 +19,21 @@ dependencies:
 
   cupertino_icons: ^1.0.2
 
-  #log
+  # log
   logger: ^1.1.0
 
-  #local database
+  # local database
   hive: ^2.2.2
   hive_flutter: ^1.1.0
   shared_preferences: ^2.0.15
   
-  #provider
+  # provider
   bloc: ^8.1.0
   flutter_bloc: ^8.1.1
   bloc_test: ^9.1.0
   path_provider: ^2.0.11
 
-  #fonts
+  # fonts
   google_fonts: ^3.0.1
   auto_size_text: ^3.0.0
 
@@ -42,22 +42,22 @@ dependencies:
   flutter_svg: ^1.1.5
 
   # other widgets
-  flutter_spinkit: ^5.1.0
+  nuts_activity_indicator: ^1.0.0
   top_snackbar_flutter: ^2.1.1
   
-  #animations
+  # animations
   animated_digit: ^3.2.1
   animate_do: ^2.1.0
+
   mockito: ^5.3.2
   equatable: ^2.0.5
 
-  # 
+  # feature
   rate_my_app: ^1.1.3
   rating_dialog: ^2.0.4
   store_redirect: ^2.0.1
   share_plus: ^6.3.0
   upgrader: ^6.0.1
-  path_provider_android: ^2.0.22
 
   # mobile add
   google_mobile_ads: ^2.0.1
